--- a/src/main/resources/templates/final_thesis_approval_template.html
+++ b/src/main/resources/templates/final_thesis_approval_template.html
@@ -9,7 +9,6 @@
             margin: 20mm 25mm 20mm 25mm;
         }
 
-        /* OVO JE KLJUČNO ZA POZICIONIRANJE */
         html {
             height: 100%;
         }
@@ -19,15 +18,12 @@
             line-height: 1.3;
             color: #000;
 
-            /* 1. Postavljamo body kao referencu za pozicioniranje */
             position: relative;
-            /* 2. Osiguravamo da body ide do dna stranice čak i kad ima malo teksta */
             min-height: 100%;
             box-sizing: border-box;
             margin: 0;
         }
 
-        /* HELPER CLASSES */
         .bold { font-weight: bold; }
         .center { text-align: center; }
         .justify { text-align: justify; }
@@ -86,7 +82,6 @@
 
         .structure-content {
             margin-top: 5px;
-            /* Ovdje je tvoje uvlačenje koje si tražila ranije */
             padding-left: 0;
         }
 
@@ -216,7 +211,7 @@
 <div>
     <div class="explanation-title">O b r a z l o ž e n j e</div>
     <div class="justify content-paragraph">
-        <b>{{studentLastName}} {{studentFirstName}}</b> je stekao/la uslov za polaganje diplomskog/završnog rada budići da je {{examRequirement}}.
+        <b>{{studentLastName}} {{studentFirstName}}</b> je stekao/la uslov za polaganje diplomskog/završnog rada budući da je {{examRequirement}}.
         <br/><br/>
         Dana {{applicationDate}} godine, podnio/la je Zahtjev za ozvaničenje diplomskog/završnog rada na {{studentCycle}} ciklusu studija Politehničkog fakulteta Univerziteta u Zenici, što je riješeno kao u izreci.
     </div>
